removed some dependencies from root package.json

--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
-  "dependencies": {
-    "apollo-react-hooks": "0.0.1",
-    "graphql": "^15.5.1"
-  }
+  "dependencies": {}
 }
